--- a/public/styles.css
+++ b/public/styles.css
@@ -14,19 +14,19 @@ body {
 
 #intro-screen {
     background-image: url('images/background.png');
-    background-repeat: repeat-y;
-    background-size: 900px auto;
-    background-position: center;
-    color: white;
+    background-color: rgb(159, 25, 25);
+    width: 80vw;
     padding: 20px;
-    text-align: center;
-    max-width: 900px;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    position: relative;
-    box-sizing: border-box;
-    padding-top: 50px;  
-    padding-bottom: 50px; 
+    
+}
+
+button{
+    background-color: black;
+    color: white;
+    padding: 10px;
+    border-radius: 5px;
+}
+
+#game-screen{
+    display: none;
 }
