--- a/public/styles.css
+++ b/public/styles.css
@@ -30,3 +30,16 @@ button{
 #game-screen{
     display: none;
 }
+
+#game-board{
+    background-image: url('images/background.png');
+    width: 40vw;
+    height: 40vw;
+    display: grid;
+}
+
+.cell{
+    width: 50px;
+    height: 50px;
+    border: black;
+}
