--- a/public/styles.css
+++ b/public/styles.css
@@ -43,3 +43,8 @@ button{
     height: 50px;
     border: black;
 }
+
+.wall{
+    background-image: url("images/wall.png");
+    background-size: cover;
+}
