--- a/public/styles.css
+++ b/public/styles.css
@@ -47,3 +47,8 @@ button{
     background-image: url("images/wall.png");
     background-size: cover;
 }
+
+.player{
+    background-image: url("images/player.png");
+    background-size: cover;
+}
